stub consumer code